--- a/templates/about.html
+++ b/templates/about.html
@@ -118,7 +118,11 @@
     
     
   </div>
-
+  <section id="ft-1">
+    <div class="footer-1">
+  
+    </div>
+  </section>
   <div id="footer-about">
     <div class="col-2">
        <a href="https://github.com/andre-bandeli"> <img src="{% static 'img/github.png' %}" width="25px" alt=""></a>
